Adicionando link para o curriculo e repo do curso

--- a/index.html
+++ b/index.html
@@ -62,9 +62,15 @@
                     </a>
                 </li>
                 <li>
-                    <a href="" target="_blank">
+                    <a href="https://vapg2015.github.io/curriculo-html-css/" target="_blank">
                         Curriculo em HTML e CSS
                         <span>Curriculo feito em HTML e CSS.</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/Vapg2015/curso-dev-fullstack" target="_blank">
+                        Repositório do Curso Dev Fullstack
+                        <span>Repositório do Curso Dev Fullstack do Thiago Medeiros</span>
                     </a>
                 </li>
             </ul>
