Update Google Analytics

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         <link rel="stylesheet" href="css/style.css">
 
         <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-NDCG5M6V5W"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-0N0GP1WWFX"></script>
         <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'G-NDCG5M6V5W');
+        gtag('config', 'G-0N0GP1WWFX');
         </script>
     </head>
     <body>
