--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </ul>
 
         <div class="projects-blocks">
-            <h2>Projetos de Estudo</h2>
+            <h2>Portifólio de Estudo</h2>
 
             <ul class="links-list">
                 <li>
@@ -65,6 +65,12 @@
                     <a href="https://vapg2015.github.io/curriculo-html-css/" target="_blank">
                         Curriculo em HTML e CSS
                         <span>Curriculo feito em HTML e CSS.</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://vapg2015.github.io/desafio-pag-captura/" target="_blank">
+                        Desafio - Página de Captura
+                        <span>Desafio proposto no Curso de Dev Fullstack do Tiago Medeiros. O propósito era criar uma página de captura conforme o layout proposto.</span>
                     </a>
                 </li>
                 <li>
